Styling update to avoid cut off text
Styling update to fix an issue where text may become cut off text at the lower two corners of the view depending on the time of day.

--- a/magyar-clock/resources/styles.css
+++ b/magyar-clock/resources/styles.css
@@ -13,7 +13,7 @@
 }
 
 #hungarianHourLabel {
-  font-size: 60;
+  font-size: 50;
   font-family: System-Regular;
   text-length: 100;
   text-anchor: middle;
@@ -23,11 +23,11 @@
 }
 
 #hungarianMinuteLabel {
-  font-size: 50;
+  font-size: 40;
   font-family: System-Regular;
   text-length: 100;
   text-anchor: middle;
   x: 50%;
-  y: 50%+150;
+  y: 50%+145;
   fill: aqua
 }
